--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <body>
         <h1>Music Player</h1>
 
-        <div class="music-container" id="music-container">
+        <div class="music-container play" id="music-container">
             <div class="music-info">
-                <h2 id="title"></h2>
+                <h2 id="title">[Song Title]</h2>
                 <div class="progress-container" id="progress-container">
                     <div class="progress" id="progress"></div>
                 </div>
